--- a/index.html
+++ b/index.html
@@ -116,7 +116,67 @@
             </div>
           </div>
           <div class="left-cont">
-
+            <div class="left-cont col-lg-5" data-aos="zoom-in">
+                <div class="top-cont d-flex align-items-center gap-2 p-2 rounded" data-aos="fade-down">
+                  <span class="c-t d-flex align-items-center justify-content-center rounded-circle"><i class="fa-solid fa-plus"></i></span>
+                  <div class="d-flex flex-column">
+                    <span class="n-mo text-white">+$5000,00</span>
+                    <span class="m-inc">Monthly Income</span>
+                  </div>
+                </div>
+                <div class="details d-flex flex-column m-lg-0 m-auto p-3 p-lg-4 mb-3">
+                  <div class="mb-4">
+                    <span class="text-white" data-aos="fade-in">Your Transactions</span>
+                    <div class="tx-n-bd d-flex align-items-center justify-content-between p-2 mt-2 z-1 border rounded-3" data-aos="fade-up" data-aos-duration="800">
+                      <div class="d-flex gap-2">
+                        <span class="c-t d-flex my-2 align-items-center justify-content-center rounded-circle">
+                          <i class="fa fa-arrow-right-arrow-left"></i>
+                        </span>
+                        <div class="d-flex flex-column">
+                          <span class="t-trn">Transaction</span>
+                          <span class="txt-jk text-white">Joel Kenley</span>
+                        </div>
+                      </div>
+                      <span class="t-n text-white">-$68.00</span>
+                    </div>
+                    <div class="tx-n-bd d-flex align-items-center justify-content-between p-2 border m-auto mt-n1 opacity-75 rounded-3" style="width: 90%;" data-aos="fade-up" data-aos-duration="600">
+                      <div class="d-flex gap-2">
+                        <span class="c-t d-flex my-2 align-items-center justify-content-center rounded-circle">
+                          <i class="fa fa-arrow-right-arrow-left"></i>
+                        </span>
+                        <div class="d-flex flex-column">
+                          <span class="t-trn">Transaction</span>
+                          <span class="txt-jk text-white">Mark Smith</span>
+                        </div>
+                      </div>
+                      <span class="t-n text-white">-$68.00</span>
+                    </div>
+                    <div class="tx-n-bd d-flex align-items-center justify-content-between p-2 border border-top-0 m-auto mt-n1 opacity-25 rounded-3" style="width: 80%;" data-aos="fade-up" data-aos-duration="400">
+                      <div class="d-flex gap-2">
+                        <span class="c-t d-flex my-2 align-items-center justify-content-center rounded-circle">
+                          <i class="fa fa-arrow-right-arrow-left"></i>
+                        </span>
+                        <div class="d-flex flex-column">
+                          <span class="t-trn">Transaction</span>
+                          <span class="txt-jk text-white">Lenen Roy</span>
+                        </div>
+                      </div>
+                      <span class="t-n text-white">-$68.00</span>
+                    </div>
+                  </div>
+                  <div>
+                    <span class="text-white" data-aos="fade-in">Money Exchange</span>
+                    <div class="d-flex mt-3 mb-4" data-aos="fade-in">
+                      <div class="col bxb border rounded-start" data-aos="zoom-in">
+                        <div class="bxb border-bottom p-2" data-aos="zoom-in">
+                          <div data-aos="zoom-in">
+                            <img class="me-1" src="assets/icons/home_icon/indian.png" alt="" data-aos="zoom-in">
+                            <span class="text-white" data-aos="zoom-in">INR</span>
+                          </div>
+                          <span class="txt-w" data-aos="zoom-in">Indian Rupees</span>
+                        </div>
+                        <div class="p-2 txt-w">5,0000</div>
+                      </div>
           </div>
         </div>
 
