Completedhero section and added new section for products

--- a/index.html
+++ b/index.html
@@ -93,30 +93,29 @@
             hero
         -->
     <div class="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="right-cont col-lg-6 text-center text-lg-start mb-lg-0 mb-5" data-aos="zoom-in">
-            <div>
-              <div class="txt-v justify-content-center d-flex align-items-center mb-5 rounded-pill col-xl-7 col-lg-9 col-md-6 col-sm-4 " data-aos="fade-down">
-                <img class="p-2" src="assets/icons/home_icon/verification.png" alt="">
-                <span class="text-white">No LLC Required, No Credit Check.</span>
+        <div class="container">
+            <div class="row justify-content-between">
+              <div class="right-cont col-lg-6 text-center text-lg-start mb-lg-0 mb-5" data-aos="zoom-in">
+                <div>
+                  <div class="txt-v justify-content-center d-flex align-items-center mb-5 rounded-pill col-xl-7 col-lg-9 col-md-6 col-sm-4 " data-aos="fade-down">
+                    <img class="p-2" src="assets/icons/home_icon/verification.png" alt="">
+                    <span class="text-white">No LLC Required, No Credit Check.</span>
+                  </div>
+                  <div class="mb-4" data-aos="fade-down">
+                    <h1 class="text-white mb-3" data-aos="fade-down">
+                      Welcome to YourBanK Empowering Your <span class="fin">Financial Journey</span>
+                    </h1>
+                    <p class="txt-w" data-aos="fade-down">At YourBank, our mission is to provide comprehensive banking solutions that empower individuals and businesses to
+                      achieve their financial goals. We are committed to delivering personalized and innovative services that prioritize
+                      our customers' needs.
+                    </p>
+                  </div>
+                  <div class="text-center text-lg-start">
+                    <button class="btn btn-open rounded-pill" data-aos="zoom-in">Open Account</button>
+                  </div>
+                </div>
               </div>
-              <div class="mb-4" data-aos="fade-down">
-                <h1 class="text-white mb-3" data-aos="fade-down">
-                  Welcome to YourBanK Empowering Your <span class="fin">Financial Journey</span>
-                </h1>
-                <p class="txt-w" data-aos="fade-down">At YourBank, our mission is to provide comprehensive banking solutions that empower individuals and businesses to
-                  achieve their financial goals. We are committed to delivering personalized and innovative services that prioritize
-                  our customers' needs.
-                </p>
-              </div>
-              <div class="text-center text-lg-start">
-                <button class="btn btn-open rounded-pill" data-aos="zoom-in">Open Account</button>
-              </div>
-            </div>
-          </div>
-          <div class="left-cont">
-            <div class="left-cont col-lg-5" data-aos="zoom-in">
+              <div class="left-cont col-lg-5" data-aos="zoom-in">
                 <div class="top-cont d-flex align-items-center gap-2 p-2 rounded" data-aos="fade-down">
                   <span class="c-t d-flex align-items-center justify-content-center rounded-circle"><i class="fa-solid fa-plus"></i></span>
                   <div class="d-flex flex-column">
@@ -177,8 +176,79 @@
                         </div>
                         <div class="p-2 txt-w">5,0000</div>
                       </div>
+                      <div class="col bxb border rounded-end" data-aos="zoom-in">
+                        <div class="bxb border-bottom p-2" data-aos="zoom-in">
+                          <div>
+                            <img class="me-1" src="assets/icons/home_icon/usa.png" alt="">
+                            <span class="text-white" data-aos="zoom-in">USA</span>
+                          </div>
+                          <span class="txt-w" data-aos="zoom-in">United States Dollar</span>
+                        </div>
+                        <div class="p-2 txt-w">12.00</div>
+                      </div>
+                    </div>
+                    <div class="btn-ex p-2 text-center border-0 rounded-5 w-100" data-aos="zoom-in">Exchange</div>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-end mt-xl-3" data-aos="fade-in">
+                  <div class="curr-bd d-flex gap-3 p-2 me-lg-2 mt-lg-1 rounded-5" data-aos="fade-right">
+                    <span class="py-2 text-white" data-aos="fade-right">Supported Currency</span>
+                    <div class="curr rounded-5 p-1" data-aos="fade-right">
+                      <img src="assets/icons/home_icon/dollar.png" alt="" data-aos="fade-up-right">
+                      <img src="assets/icons/home_icon/pounds.png" alt="" data-aos="fade-down-left">
+                      <img src="assets/icons/home_icon/bitcoin.png" alt="" data-aos="fade-up-right">
+                      <img src="assets/icons/home_icon/compass.png" alt="" data-aos="fade-down-left">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+                    <span class="text-white" data-aos="fade-in">Money Exchange</span>
+                    <div class="d-flex mt-3 mb-4" data-aos="fade-in">
+                      <div class="col bxb border rounded-start" data-aos="zoom-in">
+                        <div class="bxb border-bottom p-2" data-aos="zoom-in">
+                          <div data-aos="zoom-in">
+                            <img class="me-1" src="assets/icons/home_icon/indian.png" alt="" data-aos="zoom-in">
+                            <span class="text-white" data-aos="zoom-in">INR</span>
+                          </div>
+                          <span class="txt-w" data-aos="zoom-in">Indian Rupees</span>
+                        </div>
+                        <div class="p-2 txt-w">5,0000</div>
+                      </div>
           </div>
         </div>
+
+          <!-- Section-1 -->
+    <section class="my-5">
+        <div class="container">
+          <div class="mb-5 text-center text-lg-start">
+            <span class="fs-2 text-white" data-aos="fade-down">Our <Span style="color: #CAFF33;">Products</Span></span>
+            <div class="row justify-content-lg-between justify-content-center">
+              <p class="col-lg-8 pt-2" style="color: #E4E4E7;" data-aos="fade-up">
+                Discover a range of comprehensive and customizable banking products at YourBank, 
+                designed to suit your unique financial needs and aspirations
+              </p>
+              <div class="btn-cont rounded-5 p-sm-1 d-flex align-items-center justify-content-between col-9 col-lg-3" data-aos="zoom-in">
+                <button class="btn-cont-b btn btn-primary rounded-pill border-0">For individuals</button>
+                <button class="btn-cont-b btn btn-primary rounded-pill border-0">For Businesses</button>
+              </div>
+            </div>
+          </div>
+          <div class="row pt-3">
+            <div class="box text-center mb-4 col-lg-4 border-end" data-aos="zoom-in">
+              <img class="mb-4" src="assets/icons/home_icon/brief_case.png" alt="" data-aos="zoom-in">
+              <div class="d-flex flex-column gap-3" data-aos="zoom-in">
+                <span class="text-white">Checking Accounts</span>
+                <p style="color:#E4E4E7;">
+                  Enjoy easy and convenient access to your funds with our range of checking account options. 
+                  Benefit from features such as online and mobile banking, debit cards, and free ATM access.
+                </p>
+              </div>
+            </div>
+            </div>
+            </div>
+            </section>
 
     </main>
 
