Added new sections and content to index.html, including Savings Accounts, Loans and Mortgages, and Use Cases sections with accompanying images and text.

--- a/index.html
+++ b/index.html
@@ -245,10 +245,58 @@
                   Benefit from features such as online and mobile banking, debit cards, and free ATM access.
                 </p>
               </div>
+              <div class="box text-center mb-4 col-lg-4 border-end" data-aos="zoom-in">
+                <img class="mb-4" src="assets/icons/home_icon/box.png" alt="" data-aos="zoom-in">
+                <div class="d-flex flex-column gap-3" data-aos="zoom-in">
+                  <span class="text-white">Savings Accounts</span>
+                  <p style="color:#E4E4E7;">
+                    Build your savings with our competitive interest rates and flexible savings account options. 
+                    Whether you're saving for a specific goal or want to grow your wealth over time, we have the right account for you.
+                  </p>
+                </div>
+              </div>
+              <div class="text-center mb-4 col-lg-4" data-aos="zoom-in">
+                <img class="mb-4" src="assets/icons/home_icon/camera.png" alt="" data-aos="zoom-in">
+                <div class="d-flex flex-column gap-3" data-aos="zoom-in">
+                  <span class="text-white">Loans and Mortgages</span>
+                  <p style="color:#E4E4E7;">
+                    Realize your dreams with our flexible loan and mortgage options. From personal loans to home mortgages, our experienced 
+                    loan officers are here to guide you through the application process and help you secure the funds you need.
+                </div>
+              </div>
             </div>
+          </div>
+        </section>
+
+          <!-- section-2 -->
+    <section>
+        <div class="container d-flex flex-column gap-5 text-center text-lg-start">
+          <div>
+            <Span class="fs-2" style="color: #CAFF33;" data-aos="fade-down">Use Cases</Span>
+            <p style="color:#E4E4E7;" data-aos="fade-up">At YourBank, we cater to the diverse needs of individuals and businesses alike, offering a wide range of financial solutions</p>
+          </div>
+          <div class="cont-top row justify-content-between">
+            <div class="L l-cont col-lg-6 px-4 py-4 rounded-4" data-aos="zoom-in">
+              <div class="d-flex gap-2 mb-2">
+                <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                  <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/hand_money.png" alt=""></span>
+                  <span class="text-white" data-aos="zoom-in">Managing Personal Finances</span>
+                </div>
+                <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                  <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/hand.png" alt=""></span>
+                  <span class="text-white" data-aos="zoom-in">Saving for the Future</span>
+                </div>
+              </div>
+              <div class="d-flex gap-2">
+                <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                  <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/bank.png" alt=""></span>
+                  <span class="text-white" data-aos="zoom-in">Homeownership</span>
+                </div>
             </div>
-            </div>
-            </section>
+        </div>
+    </div>
+</div>
+</section>
 
     </main>
 
