Added new section to index.html for 'For Individuals' and 'For Business' with icons, text, and statistics

--- a/index.html
+++ b/index.html
@@ -292,6 +292,54 @@
                   <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/bank.png" alt=""></span>
                   <span class="text-white" data-aos="zoom-in">Homeownership</span>
                 </div>
+                <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                    <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/book.png" alt=""></span>
+                    <span class="text-white" data-aos="zoom-in">Education Funding</span>
+                  </div>
+                </div>
+              </div>
+              <div class="R r-cont col-lg-5 my-2" style="color:#E4E4E7;">
+                <div class="mb-5">
+                  <Span class="text-white fs-2" data-aos="fade-down">For Individuals</Span>
+                  <p class="mt-3" data-aos="fade-up">
+                    For individuals, our mortgage services pave the way to homeownership, and our flexible personal loans provide vital 
+                    support during various life milestones. We also prioritize retirement planning, ensuring a financially secure future for our customers
+                  </p>
+                </div>
+                <div class="row mb-5 justify-content-center">
+                  <div class="bd-r d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-bottom pb-lg-0 pb-md-0 pb-4">
+                    <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">78%</span>
+                    <span data-aos="fade-up">Secure Retirement Planning</span>
+                  </div>
+                  <div class="bd-r d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-bottom pb-lg-0 pb-md-0 pb-4">
+                    <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">63%</span>
+                    <span data-aos="fade-up">Manageable Debt Consolidation</span>
+                  </div>
+                  <div class="bdx d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-bottom pb-lg-0 pb-md-0 pb-4">
+                    <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">91%</span>
+                    <span data-aos="fade-up">Reducing financial burdens</span>
+                  </div>
+                </div>
+                <div>
+                  <button class="btn-learn btn btn-primary rounded-pill" data-aos="zoom-in">Learn More</button>
+                </div>
+              </div>
+            </div>
+            <div class="cont-bottom row justify-content-between">
+              <div class="L col-lg-5 my-2" style="color:#E4E4E7;">
+                <div  class="mb-5">
+                  <Span class="text-white fs-2" data-aos="fade-down">For Business</Span>
+                  <p class="mt-3" data-aos="fade-up">
+                    For businesses, we empower growth with working capital solutions that optimize cash flow, and 
+                    our tailored financing options fuel business expansion. Whatever your financial aspirations, 
+                    YourBank is committed to providing the right tools and support to achieve them
+                  </p>
+                </div>
+                <div class="row mb-5 justify-content-center">
+                  <div class="bd-r d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-end border-bottom pb-lg-0 pb-md-0 pb-4">
+                    <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">65%</span>
+                    <span data-aos="fade-up">Cash Flow Management</span>
+                  </div>
             </div>
         </div>
     </div>
