Added new HTML elements and content to index.html, including divs, spans, buttons, and images, with various classes and styles.

--- a/index.html
+++ b/index.html
@@ -341,10 +341,44 @@
                     <span data-aos="fade-up">Cash Flow Management</span>
                   </div>
             </div>
+            <div class="bd-r d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-bottom border-end pb-lg-0 pb-md-0 pb-4">
+                <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">70%</span>
+                <span data-aos="fade-up">Drive Business Expansion</span>
+              </div>
+              <div class="bdx d-flex flex-column col-lg-4 col-md-3 col-7 text-lg-start text-md-start text-center border-bottom pb-lg-0 pb-md-0 pb-4">
+                <span class="fs-1" style="color: #CAFF33;" data-aos="zoom-in">45%</span>
+                <span data-aos="fade-up">Streamline Payroll Processing</span>
+              </div>
+            </div>
+            <div>
+              <button class="btn-learn btn btn-primary rounded-pill" data-aos="zoom-in">Learn More</button>
+            </div>
+          </div>
+          <div class="R l-cont col-lg-6 px-4 py-4 rounded-4" data-aos="zoom-in">
+            <div class="d-flex gap-2 mb-2">
+              <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/building.png" alt=""></span>
+                <span class="text-white" data-aos="zoom-in">Startups and Entrepreneurs</span>
+              </div>
+              <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/camera.png" alt=""></span>
+                <span class="text-white" data-aos="zoom-in">Cash Flow Management</span>
+              </div>
+            </div>
+            <div class="d-flex gap-2">
+              <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/pot.png" alt=""></span>
+                <span class="text-white" data-aos="zoom-in">Business Expansion</span>
+              </div>
+              <div class="bxr col-6 rounded-4 p-lg-5 p-md-5 p-sm-4 p-3 d-flex flex-column text-center" data-aos="zoom-in">
+                <span data-aos="zoom-in"><img class="mb-4" src="assets/icons/home_icon/coin.png" alt=""></span>
+                <span class="text-white" data-aos="zoom-in">Payment Solutions</span>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-</section>
+      </div>
+    </section>
 
     </main>
 
