--- a/index.html
+++ b/index.html
@@ -380,6 +380,62 @@
       </div>
     </section>
 
+     <!-- Section-3 -->
+     <section class="my-5 lg-m-0 mx-4">
+      <div class="container">
+        <div class="mb-5 text-center text-lg-start">
+          <span class="fs-2 text-white" data-aos="fade-down">Our <Span style="color: #CAFF33;">Features</Span></span>
+          <p class="col-lg-11 pt-2" style="color: #E4E4E7;" data-aos="fade-up">
+            Experience a host of powerful features at YourBank, including seamless online banking, secure transactions, 
+            and personalized financial insights, all designed to enhance your banking experience
+          </p>
+        </div>
+        <div class="row gap-3">
+          <div class="box-btnl p-4 h-50 col-lg-2 rounded text-center">
+            <button class="btn-role btn  rounded-5 mb-lg-3">Online Banking</button>
+            <button class="btn-role btn  rounded-5 mb-lg-3">Online Banking</button>
+            <button class="btn-role btn  rounded-5">Online Banking</button>
+          </div>
+          <div class="col p-0" data-aos="zoom-in">
+            <div class="row d-flex justify-content-lg-center gap-2 mb-2">
+              <div class="bxr col-lg-5 rounded-4 p-lg-4 p-md-3 p-3 d-flex flex-column gap-2" data-aos="zoom-in">
+                <div class="d-flex justify-content-between">
+                  <span data-aos="zoom-in" class="text-white fs-4">24/7 Account Access</span>
+                  <span data-aos="zoom-in"><img src="assets/icons/home_icon/up-arrow.png" alt=""></span>
+                </div>
+                <p class="text-white" data-aos="zoom-in">
+                  Enjoy the convenience of accessing your accounts anytime, anywhere through our secure online banking platform. 
+                  Check balances, transfer funds, and pay bills with ease.
+                </p>
+              </div>
+              <div class="bxr col-lg-5 rounded-4 p-lg-4 p-md-3 p-3 d-flex flex-column gap-2" data-aos="zoom-in">
+                <div class="d-flex justify-content-between">
+                  <span data-aos="zoom-in" class="text-white fs-4">Mobile Banking App</span>
+                  <span data-aos="zoom-in"><img src="assets/icons/home_icon/up-arrow.png" alt=""></span>
+                </div>
+                <p class="text-white" data-aos="zoom-in">
+                  Stay connected to your finances on the go with our user-friendly mobile banking app. Easily manage your accounts, deposit checks, 
+                  and make payments from your smartphone or tablet.
+                </p>
+              </div>
+            </div>
+            <div class="row d-flex justify-content-lg-center gap-2">
+              <div class="bxr col-lg-5 rounded-4 p-lg-4 p-md-3 p-3 d-flex flex-column gap-2" data-aos="zoom-in">
+                <div class="d-flex justify-content-between">
+                  <span data-aos="zoom-in" class="text-white fs-4">Secure Transactions</span>
+                  <span data-aos="zoom-in"><img src="assets/icons/home_icon/up-arrow.png" alt=""></span>
+                </div>
+                <p class="text-white" data-aos="zoom-in">
+                  Rest assured knowing that your transactions are protected by industry-leading security measures. We employ encryption and multi-factor 
+                  authentication to safeguard your financial information.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     </main>
 
     <!-- 
