--- a/index.html
+++ b/index.html
@@ -431,10 +431,67 @@
                 </p>
               </div>
             </div>
+            <div class="bxr col-lg-5 rounded-4 p-lg-4 p-md-3 p-3 d-flex flex-column gap-2" data-aos="zoom-in">
+              <div class="d-flex justify-content-between">
+                <span data-aos="zoom-in" class="text-white fs-4">Bill Pay and Transfers</span>
+                <span data-aos="zoom-in"><img src="assets/icons/home_icon/up-arrow.png" alt=""></span>
+              </div>
+              <p class="text-white" data-aos="zoom-in">
+                Save time and avoid late fees with our convenient bill pay service. Set up recurring payments or make one-time transfers between your 
+                accounts with just a few clicks.
+              </p>
+            </div>
+
           </div>
         </div>
       </div>
     </section>
+
+
+     <!-- Section-5 -->
+     <section id="bold" >
+      <div class="container-sm py-5">
+        <div class="pb-5 mb-4 " data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
+          <h2 id="Testimonials">
+            Our <span class="c">Testimonials</span>
+          </h2>
+          <div class="row justify-content-between " data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
+            <p class="col-lg-6 col-md-6 col-sm-12 my-3 fs-6" id="Testimonials">Lorem ipsum dolor sit amet consectetur. Blandit odio semper risus pellentesque elit.
+              Pellentesque eget ut imperdiet nulla penatibus. Nascetur viverra arcu sed amet cursus purus.
+            </p>
+            <div class=" d-flex rounded-pill border-2 border-dark col-lg-4 col-md-4 col-sm-12 selection" >
+              <button type="submit" class="btn b w-50 rounded-pill border border-dark pills p-2">For Individuals</button>
+              <button type="submit" class="btn  w-50 rounded-pill pills p-2">For Businesses</button>
+            </div>
+          </div>
+        </div>
+        <!-- Slider main container -->
+        <div class="swiper text-body-white">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper z-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
+            <!-- Slides -->
+            <div class="swiper-slide border border-dark rounded-4" data-swiper-autoplay="2000">  
+              <div class="text-center gy-4">
+                <div class="slash"><img src="./images/Icon.svg" alt="" srcset=""></div>
+                <p class="py-4 mx-2">YourBank has been my trusted financial partner for years. thier personalized service and innovative 
+                  digital banking solutions have made managing my finances a breeze
+                </p>
+                <h5  class="c">Sara T</h5>
+              </div>
+            </div>
+            <div class="swiper-slide border border-dark rounded-4" data-swiper-autoplay="2000">
+              <div class="text-center gy-4">
+                <div class="slash"><img src="./images/Icon.svg" alt="" srcset=""></div>
+                <p class="py-4 mx-2">I recently started my own business, and YourBank has been instrumental in helping 
+                  me set up my business accounts and secure the financing I needed.
+                </p>
+                <h5  class="c">John D</h5>
+              </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </section>
 
     </main>
 
