--- a/about.html
+++ b/about.html
@@ -63,5 +63,58 @@
     </div>
 </section>
 
+ <!-- section-four -->
+ <section id="vision" class="py-5 ">
+    <div class="container-sm" data-aos="fade-right" data-aos-delay="300" data-aos-duration="3000">
+        <div class="container d-flex flex-column flex-column-reverse  flex-lg-row gap-5 ">
+            <div class="mission-text d-flex align-content-center flex-column justify-content-center ">
+                <h2 class="text-white text-center text-sm-start">Vision</h2>
+                <p class="text-secondary  text-center text-sm-start">At YourBank, our mission is to empower our customers to achieve financial success. We are dedicated to delivering innovative banking solutions that cater to their unique needs. Through personalized services, expert guidance, and cutting-edge technology, we aim to build strong, lasting relationships with our customers. Our mission is to be their trusted partner, helping them navigate their financial journey and realize their dreams.</p>
+            </div> 
+            <img src="./images/vision image.png" alt="" class="w-100 ">
+        </div>
+    </div>
+</section>
+<!-- section five -->
+<section id="press">
+    <div class="press-container container-sm" data-aos="fade-right"  data-aos-delay="300">
+        <h2 class="text-b-main  text-center text-sm-start ">Press Releases</h2>
+        <p class="text-secondary text-center text-sm-start">Stay updated with the latest happenings and exciting developments at YourBank through our press releases.</p>
+    </div>
+</section>
+<!-- section six -->
+<section id="press-card">
+    <div class="press-card-contain container-sm" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="3000">
+        <div class="row gy-4 py-5 ">
+            <div class="col col-md-12 col-lg-6">
+                <div class="card box-body p-4 rounded-4">
+                    <img src="./images/press-image 1.png" alt="">
+                    <div class="text mt-3 p-sm-4 p-2">
+                      <h2 class="text-white fs-5">YourBank Launches New Rewards Program to Enhance Customer Loyalty and Satisfaction</h2>
+                      <div class="d-flex text-secondary  gap-1  py-2">
+                          <p class="rounded-5 px-2 welcome-text-bg-col fs-6 ">Location: India</p>
+                          <p class="rounded-5 px-2 welcome-text-bg-col fs-6 ">Date: 06/11/2024</p>
+                      </div>
+                      <p class="text-secondary ">YourBank is pleased to announce the introduction of our new Rewards Program, aimed at rewarding our loyal customers and enhancing their banking experience. The program offers exclusive benefits, discounts, and personalized offers tailored to individual customer preferences. With this initiative, YourBank reaffirms its commitment to delivering exceptional value and building lasting relationships with our valued customers.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-12 col-lg-6">
+                <div class="card box-body p-4 rounded-4">
+                    <img src="./images/press-image 2.png" alt="">
+                    <div class="text mt-3 p-sm-4 p-2">
+                      <h2 class="text-white fs-5 ">YourBank Expands Branch Network with Opening of New Location in Chennai</h2>
+                      <div class="d-flex  text-secondary  gap-1  py-2">
+                          <p class="rounded-5 px-2 welcome-text-bg-col fs-6 ">Location: India</p>
+                          <p class="rounded-5 px-2 welcome-text-bg-col fs-6 ">Date: 06/11/2024</p>
+                      </div>
+                      <p class="text-secondary ">YourBank is pleased to announce the introduction of our new Rewards Program, aimed at rewarding our loyal customers and enhancing their banking experience. The program offers exclusive benefits, discounts, and personalized offers tailored to individual customer preferences. With this initiative, YourBank reaffirms its commitment to delivering exceptional value and building lasting relationships with our valued customers.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
