--- a/about.html
+++ b/about.html
@@ -112,9 +112,57 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col col-md-12 col-lg-6">
+                <div class="card box-body p-4 rounded-4">
+                    <img src="./images/press-image 3.png" alt="">
+                    <div class="text mt-3 p-sm-4 p-2">
+                      <h2 class="text-white fs-5 ">YourBank Partners with Local Nonprofit to Support Financial Education Initiatives</h2>
+                      <div class="d-flex text-secondary  gap-1  py-2">
+                          <p class="rounded-5 px-2 welcome-text-bg-col text-secondary fs-6 ">Location: India</p>
+                          <p class="rounded-5 px-2 welcome-text-bg-col text-secondary fs-6 ">Date: 06/11/2024</p>
+                      </div>
+                      <p class="text-secondary ">YourBank is pleased to announce the introduction of our new Rewards Program, aimed at rewarding our loyal customers and enhancing their banking experience. The program offers exclusive benefits, discounts, and personalized offers tailored to individual customer preferences. With this initiative, YourBank reaffirms its commitment to delivering exceptional value and building lasting relationships with our valued customers.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-12 col-lg-6">
+                <div class="card box-body p-4 rounded-4">
+                    <img src="./images/press-image 4.png" alt="">
+                    <div class="text mt-3 p-sm-4 p-2">
+                      <h2 class="text-white fs-5 ">YourBank Launches Sustainable Banking Initiative to Promote Environmental Responsibility</h2>
+                      <div class="d-flex text-secondary  gap-1  py-2">
+                          <p class="rounded-5 px-2 welcome-text-bg-col text-secondary fs-6 ">Location: India</p>
+                          <p class="rounded-5 px-2 welcome-text-bg-col text-secondary fs-6 ">Date: 06/11/2024</p>
+                      </div>
+                      <p class="text-secondary ">YourBank is pleased to announce the introduction of our new Rewards Program, aimed at rewarding our loyal customers and enhancing their banking experience. The program offers exclusive benefits, discounts, and personalized offers tailored to individual customer preferences. With this initiative, YourBank reaffirms its commitment to delivering exceptional value and building lasting relationships with our valued customers.</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
+
+ <!-- Footer -->
+ <footer class="welcome-section-bg-col py-5">
+    <div class="footer-contain container-sm py-5 ">
+      <div class="yourbank d-flex justify-content-center align-items-center  text-white gap-1 " data-aos="zoom-in">
+        <img src="assets/icons/home_icon/shape-30.png" alt="" class="align-content-center  align-items-center ">
+        <p class="mt-3">YourBank</p>
+      </div>
+        <div class="list mt-5">
+            <ul class="navbar-nav d-flex flex-row align-content-center justify-content-center gap-1 gap-lg-5   text-white  ">
+            <li class="nav-item" data-aos="zoom-in">
+                <a class="footer-link text-white" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item" data-aos="zoom-in">
+                <a class="footer-link text-white" href="./careers.html">Careers</a>
+            </li>
+            </ul>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
